waybar: resolve icon spacing issues

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,7 +1,7 @@
 @import "mocha.css";
 
 * {
-	font-family: "JetBrainsMono Nerd Font", Roboto, Helvetica, Arial, sans-serif;
+	font-family: "JetBrainsMono Nerd Font Propo", Roboto, Helvetica, Arial, sans-serif;
 	font-size: 16px;
 }
 
